--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/id-Software">Id Software</a>
+                                    <a href="https://www.irishtimes.com/culture/books/rome-vs-greece-a-little-known-clash-of-empires-1.3523821">Rome vs Greece: a clash of empires</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17299209">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17296910">
                                         
-                                            38 comments
+                                            86 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=bane">bane</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528848683"
+                                            href="https://news.ycombinator.com/user?id=ascertain">ascertain</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528830907"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    173 points
+                                    176 points
                                 </span>
                             </td>
                         </tr>
@@ -239,19 +239,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://vue-native.io">Vue Native</a>
+                                    <a href="https://github.com/id-Software">Id Software</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17299374">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17299209">
                                         
-                                            64 comments
+                                            39 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=tomcam">tomcam</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528851161"
+                                            href="https://news.ycombinator.com/user?id=bane">bane</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528848683"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    172 points
+                                    174 points
                                 </span>
                             </td>
                         </tr>
@@ -467,7 +467,7 @@
                                             href="https://news.ycombinator.com/user?id=CSDude">CSDude</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528724150"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    149 points
+                                    150 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528870810" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528871407" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
