--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.bloomberg.com/news/articles/2018-06-11/germany-orders-daimler-to-recall-774-000-diesel-cars-in-europe">Germany Orders Daimler to Recall 774,000 Diesels in Europe</a>
+                                    <a href="http://aristo-demo.allenai.org">Aristo – A system that reads, learns, and reasons about science</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17286400">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17297970">
                                         
-                                            69 comments
+                                            67 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=felixbraun">felixbraun</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528737843"
+                                            href="https://news.ycombinator.com/user?id=nmstoker">nmstoker</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528837485"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     104 points
                                 </span>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528871407" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528872009" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
