--- a/top_stories/halfweek/index.html
+++ b/top_stories/halfweek/index.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://elie.net/blog/ai/attacks-against-machine-learning-an-overview">Attacks against machine learning – an overview</a>
+                                    <a href="https://www.independent.co.uk/news/health/psychedelic-drugs-brain-repair-lsd-depression-anxiety-lsd-dmt-amphetamines-ketamine-a8395511.html">Psychedelics could heal brain cells in people suffering from depression: study</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17279702">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17295205">
                                         
-                                            63 comments
+                                            194 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ebursztein">ebursztein</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528658019"
+                                            href="https://news.ycombinator.com/user?id=pmoriarty">pmoriarty</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528822598"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     325 points
                                 </span>
@@ -606,7 +606,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528872609" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528873210" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
