--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://zycrypto.com/eu-blockchain-observatory-forum-to-discuss-regulations/">EU Blockchain Observatory Forum to Discuss Regulations</a>
+                                    <a href="https://www.seattletimes.com/seattle-news/politics/about-face-seattle-city-council-repeals-head-tax-amid-pressure-from-big-businesses/">Seattle City Council repeals head tax amid pressure from big businesses</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17291989">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17298476">
                                         
-                                            2 comments
+                                            3 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=theweb1">theweb1</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528797661"
+                                            href="https://news.ycombinator.com/user?id=fluxic">fluxic</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528840900"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    18 points
+                                    7 points
                                 </span>
                             </td>
                         </tr>
@@ -465,7 +465,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528881007" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528881608" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
