--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -323,7 +323,7 @@
                                             href="https://news.ycombinator.com/user?id=fanf2">fanf2</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528843382"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    206 points
+                                    208 points
                                 </span>
                             </td>
                         </tr>
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.toptal.com/cross-platform/haxe-language-cross-platform">Haxe: Cross-Platform Development's Best-Kept Secret</a>
+                                    <a href="https://www.irishtimes.com/culture/books/rome-vs-greece-a-little-known-clash-of-empires-1.3523821">Rome vs Greece: a clash of empires</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17255490">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17296910">
                                         
-                                            41 comments
+                                            102 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=kevin_bloch">kevin_bloch</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528377578"
+                                            href="https://news.ycombinator.com/user?id=ascertain">ascertain</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528830907"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     203 points
                                 </span>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528881007" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528881608" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
