--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.theverge.com/circuitbreaker/2018/6/12/17416982/plume-superpod-adaptive-wifi-subscription-service-announced">Plume is turning home Wi-Fi into a subscription service</a>
+                                    <a href="http://nymag.com/restaurants/features/65124/">The Magician of Meat: How Pat LaFrieda Reinvented the Burger</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17293078">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17295131">
                                         
-                                            50 comments
+                                            12 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=el_duderino">el_duderino</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528810543"
+                                            href="https://news.ycombinator.com/user?id=smacktoward">smacktoward</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528822258"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    29 points
+                                    23 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528882206" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528882806" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
