--- a/top_stories/halfweek/page6.html
+++ b/top_stories/halfweek/page6.html
@@ -389,13 +389,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17300143">
                                         
-                                            29 comments
+                                            30 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ognyankulev">ognyankulev</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528862490"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    101 points
+                                    103 points
                                 </span>
                             </td>
                         </tr>
@@ -431,17 +431,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.axios.com/scooter-startup-bird-is-seeking-a-2-billion-valuation-1528813078-11187061-2a49-440c-a2e6-65e74faad5ec.html">Scooter startup Bird is seeking a $2B valuation</a>
+                                    <a href="https://remotestorage.io/">RemoteStorage – An open protocol for per-user storage on the Web</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17293571">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17297673">
                                         
-                                            248 comments
+                                            23 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ilamont">ilamont</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528813904"
+                                            href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528835348"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     98 points
                                 </span>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528887609" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528888207" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
