--- a/top_stories/week/page6.html
+++ b/top_stories/week/page6.html
@@ -215,17 +215,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.dannyguo.com/blog/the-decline-of-the-macbook-pro/">The Decline of the MacBook Pro</a>
+                                    <a href="https://brandur.org/graphql">Living APIs and the Case for GraphQL</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17266492">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17269028">
                                         
-                                            292 comments
+                                            80 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=dguo">dguo</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528472263"
+                                            href="https://news.ycombinator.com/user?id=craigkerstiens">craigkerstiens</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528486847"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     210 points
                                 </span>
@@ -239,19 +239,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.irishtimes.com/culture/books/rome-vs-greece-a-little-known-clash-of-empires-1.3523821">Rome vs Greece: a clash of empires</a>
+                                    <a href="https://www.dannyguo.com/blog/the-decline-of-the-macbook-pro/">The Decline of the MacBook Pro</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17296910">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17266492">
                                         
-                                            106 comments
+                                            292 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ascertain">ascertain</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528830907"
+                                            href="https://news.ycombinator.com/user?id=dguo">dguo</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528472263"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    209 points
+                                    210 points
                                 </span>
                             </td>
                         </tr>
@@ -489,7 +489,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528888207" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528888807" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
