--- a/top_stories/halfweek/page2.html
+++ b/top_stories/halfweek/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.ietf.org/mail-archive/web/tls/current/msg26385.html">Enforcing TLS protocol invariants by rolling versions every six weeks</a>
+                                    <a href="http://www.mymoneyblog.com/country-time-lemonade-stand-legalade.html">Country Time Lemonade Will Pay Legal Fees for Unlicensed Lemonade Stands</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17298747">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17283758">
                                         
-                                            56 comments
+                                            172 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=fanf2">fanf2</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528843382"
+                                            href="https://news.ycombinator.com/user?id=ca98am79">ca98am79</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528721316"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    229 points
+                                    230 points
                                 </span>
                             </td>
                         </tr>
@@ -299,7 +299,7 @@
                                             href="https://news.ycombinator.com/user?id=ascertain">ascertain</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528830907"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    209 points
+                                    210 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528888207" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528888807" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
