--- a/top_stories/halfweek/page4.html
+++ b/top_stories/halfweek/page4.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://aristo-demo.allenai.org">Aristo – A system that reads, learns, and reasons about science</a>
+                                    <a href="https://jackschaedler.github.io/handwriting-recognition/">Back to the Future of Handwriting Recognition</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17297970">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17288454">
                                         
-                                            90 comments
+                                            37 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=nmstoker">nmstoker</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528837485"
+                                            href="https://news.ycombinator.com/user?id=jabagawee">jabagawee</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528750203"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    138 points
+                                    139 points
                                 </span>
                             </td>
                         </tr>
@@ -293,7 +293,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17298721">
                                         
-                                            108 comments
+                                            109 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=raleighm">raleighm</a></strong> &nbsp;•&nbsp;
@@ -371,7 +371,7 @@
                                             href="https://news.ycombinator.com/user?id=tdumitrescu">tdumitrescu</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528828578"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    130 points
+                                    132 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528888207" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528888807" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
