--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.wsj.com/graphics/tech-companies-to-watch-2018/">Tech Companies to Watch 2018</a>
+                                    <a href="https://spqr.eecs.umich.edu/papers/bolton-blue-note-IEEESSP-2018.pdf">Intentional Acoustic Interference Damages Availability and Integrity in HDDs [pdf]</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17299682">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17295595">
                                         
-                                            6 comments
+                                            8 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=vnellore">vnellore</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528855306"
+                                            href="https://news.ycombinator.com/user?id=weirdo1">weirdo1</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528824568"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    11 points
+                                    25 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528890005" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528890609" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
