--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://qz.com/1302201/american-toddlers-are-eating-more-sugar-than-the-amount-recommended-for-adults/">American toddlers are eating more sugar than the amount recommended for adults</a>
+                                    <a href="https://github.com/id-Software">Id Software</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17288321">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17299209">
                                         
-                                            364 comments
+                                            79 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=prostoalex">prostoalex</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528749356"
+                                            href="https://news.ycombinator.com/user?id=bane">bane</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528848683"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    311 points
+                                    312 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528890609" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528891209" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
