--- a/top_stories/daily/page4.html
+++ b/top_stories/daily/page4.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://spqr.eecs.umich.edu/papers/bolton-blue-note-IEEESSP-2018.pdf">Intentional Acoustic Interference Damages Availability and Integrity in HDDs [pdf]</a>
+                                    <a href="http://www.latimes.com/politics/la-pol-ca-california-split-three-states-20180612-story.html">Radical plan to split California into three states earns spot on November ballot</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17295595">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17299838">
                                         
-                                            8 comments
+                                            2 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=weirdo1">weirdo1</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528824568"
+                                            href="https://news.ycombinator.com/user?id=spking">spking</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528857674"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    25 points
+                                    11 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528892407" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528893008" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
