--- a/top_stories/week/page1.html
+++ b/top_stories/week/page1.html
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.independent.co.uk/news/health/psychedelic-drugs-brain-repair-lsd-depression-anxiety-lsd-dmt-amphetamines-ketamine-a8395511.html">Psychedelics could heal brain cells in people suffering from depression: study</a>
+                                    <a href="https://github.com/id-Software">Id Software</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17295205">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17299209">
                                         
-                                            215 comments
+                                            101 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pmoriarty">pmoriarty</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528822598"
+                                            href="https://news.ycombinator.com/user?id=bane">bane</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528848683"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    348 points
+                                    349 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528894810" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528895407" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
