--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -251,7 +251,7 @@
                                             href="https://news.ycombinator.com/user?id=coloneltcb">coloneltcb</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528836076"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    269 points
+                                    273 points
                                 </span>
                             </td>
                         </tr>
@@ -371,7 +371,7 @@
                                             href="https://news.ycombinator.com/user?id=fanf2">fanf2</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528843382"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    249 points
+                                    250 points
                                 </span>
                             </td>
                         </tr>
@@ -527,17 +527,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.reddit.com/r/privacy/comments/8ps94a/it_appears_reddit_direct_messages_are_being/">Reddit DMs will not reach their destination if they contain certain text</a>
+                                    <a href="https://www.irishtimes.com/culture/books/rome-vs-greece-a-little-known-clash-of-empires-1.3523821">Rome vs Greece: a clash of empires</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17275401">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17296910">
                                         
-                                            68 comments
+                                            118 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ValentineC">ValentineC</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528583901"
+                                            href="https://news.ycombinator.com/user?id=ascertain">ascertain</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528830907"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     231 points
                                 </span>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://torrentfreak.com/ipvanish-no-logging-vpn-led-homeland-security-to-comcast-user-180505/">IPVanish “No-Logging” VPN Led Homeland Security to Comcast User</a>
+                                    <a href="https://www.reddit.com/r/privacy/comments/8ps94a/it_appears_reddit_direct_messages_are_being/">Reddit DMs will not reach their destination if they contain certain text</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17254113">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17275401">
                                         
-                                            173 comments
+                                            68 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=placatedmayhem">placatedmayhem</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528358770"
+                                            href="https://news.ycombinator.com/user?id=ValentineC">ValentineC</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528583901"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     231 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528896009" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528896610" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
