--- a/top_stories/halfweek/page1.html
+++ b/top_stories/halfweek/page1.html
@@ -371,7 +371,7 @@
                                             href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528838092"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    289 points
+                                    293 points
                                 </span>
                             </td>
                         </tr>
@@ -389,7 +389,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17289536">
                                         
-                                            158 comments
+                                            159 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=nitrohorse">nitrohorse</a></strong> &nbsp;•&nbsp;
@@ -443,7 +443,7 @@
                                             href="https://news.ycombinator.com/user?id=coloneltcb">coloneltcb</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528836076"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    269 points
+                                    273 points
                                 </span>
                             </td>
                         </tr>
@@ -515,7 +515,7 @@
                                             href="https://news.ycombinator.com/user?id=fanf2">fanf2</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528843382"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    249 points
+                                    250 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="http://www.mymoneyblog.com/country-time-lemonade-stand-legalade.html">Country Time Lemonade Will Pay Legal Fees for Unlicensed Lemonade Stands</a>
+                                    <a href="https://www.irishtimes.com/culture/books/rome-vs-greece-a-little-known-clash-of-empires-1.3523821">Rome vs Greece: a clash of empires</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17283758">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17296910">
                                         
-                                            172 comments
+                                            118 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=ca98am79">ca98am79</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528721316"
+                                            href="https://news.ycombinator.com/user?id=ascertain">ascertain</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528830907"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    230 points
+                                    231 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528896009" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528896610" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
