--- a/top_stories/halfweek/page5.html
+++ b/top_stories/halfweek/page5.html
@@ -215,17 +215,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://blog.reifyworks.com/architect-the-killer-serverless-framework-41565372811b">Architect – A Serverless Framework</a>
+                                    <a href="https://svnweb.freebsd.org/base?view=revision&revision=335012">FreeBSD gets pNFS support</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17286075">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17297455">
                                         
-                                            69 comments
+                                            39 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mrbbk">mrbbk</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528736070"
+                                            href="https://news.ycombinator.com/user?id=trasz">trasz</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528833806"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     124 points
                                 </span>
@@ -461,7 +461,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17297673">
                                         
-                                            26 comments
+                                            27 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=petethomas">petethomas</a></strong> &nbsp;•&nbsp;
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528896009" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528896610" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
