--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.independent.co.uk/news/health/psychedelic-drugs-brain-repair-lsd-depression-anxiety-lsd-dmt-amphetamines-ketamine-a8395511.html">Psychedelics could heal brain cells in people suffering from depression: study</a>
+                                    <a href="https://www.bloomberg.com/news/articles/2018-06-06/github-is-microsoft-s-7-5-billion-undo-button">GitHub Is Microsoft’s $7.5B Undo Button</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17295205">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17250963">
                                         
-                                            220 comments
+                                            352 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=pmoriarty">pmoriarty</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528822598"
+                                            href="https://news.ycombinator.com/user?id=danso">danso</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528317973"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    349 points
+                                    350 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528900213" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528900807" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
