--- a/top_stories/daily/page5.html
+++ b/top_stories/daily/page5.html
@@ -251,7 +251,7 @@
                                             href="https://news.ycombinator.com/user?id=ajonnav">ajonnav</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528832195"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    46 points
+                                    47 points
                                 </span>
                             </td>
                         </tr>
@@ -551,19 +551,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://www.americanbanker.com/news/radius-in-boston-working-with-fintech-firm-to-create-online-commercial-checking-platform">Radius Bank working with Treasury Prime (YC W18) on online business checking</a>
+                                    <a href="http://nymag.com/restaurants/features/65124/">The Magician of Meat: How Pat LaFrieda Reinvented the Burger</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17298264">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17295131">
                                         
-                                            1 comments
+                                            12 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=jimbru">jimbru</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528839348"
+                                            href="https://news.ycombinator.com/user?id=smacktoward">smacktoward</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528822258"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    17 points
+                                    23 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528904407" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528905008" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
