--- a/top_stories/week/page4.html
+++ b/top_stories/week/page4.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://twitter.com/thelarkinn/status/1006746626617008128?s=21">Office 365 is being completely rewritten JavaScript</a>
+                                    <a href="https://twitter.com/DanielMicay/status/1006299769214562305">CopperheadOS has imploded</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17300893">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17289536">
                                         
-                                            338 comments
+                                            161 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=mhoad">mhoad</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528873230"
+                                            href="https://news.ycombinator.com/user?id=nitrohorse">nitrohorse</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528760102"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    277 points
+                                    285 points
                                 </span>
                             </td>
                         </tr>
@@ -269,7 +269,7 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17295502">
                                         
-                                            147 comments
+                                            148 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=smacktoward">smacktoward</a></strong> &nbsp;•&nbsp;
@@ -419,7 +419,7 @@
                                             href="https://news.ycombinator.com/user?id=ascertain">ascertain</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528830907"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    238 points
+                                    239 points
                                 </span>
                             </td>
                         </tr>
@@ -467,7 +467,7 @@
                                             href="https://news.ycombinator.com/user?id=henryaj">henryaj</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528738685"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    233 points
+                                    235 points
                                 </span>
                             </td>
                         </tr>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528911011" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528911605" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
