--- a/top_stories/daily/page6.html
+++ b/top_stories/daily/page6.html
@@ -215,19 +215,19 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://cryptojobslist.com/jobs/meme-specialist-at-ecos-estonia">Meme specialist job opening (one of those jobs that “didn't exist yet”)</a>
+                                    <a href="https://hackernoon.com/a-short-trip-to-jupyter-via-the-inter-planetary-file-system-92c36c1e5b45">Getting Started with IPFS, Python, and Jupyter Notebooks</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17296568">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17298795">
                                         
-                                            17 comments
+                                            comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=qqn">qqn</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528829208"
+                                            href="https://news.ycombinator.com/user?id=carsonfarmer">carsonfarmer</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528843854"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    18 points
+                                    15 points
                                 </span>
                             </td>
                         </tr>
@@ -441,7 +441,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528915208" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528915809" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
