--- a/top_stories/halfweek/page3.html
+++ b/top_stories/halfweek/page3.html
@@ -293,13 +293,13 @@
                                 <span class="small fade">
                                     <a class="node" href="https://news.ycombinator.com/item?id=17302301">
                                         
-                                            139 comments
+                                            147 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
                                             href="https://news.ycombinator.com/user?id=ilamont">ilamont</a></strong> &nbsp;•&nbsp;
                                     <a data-timestamp="1528891789"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
-                                    180 points
+                                    185 points
                                 </span>
                             </td>
                         </tr>
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://github.com/neovim/neovim/commit/44c6deb91ac917703c157d564eb3accbff4d37af">Neovim 0.3 released</a>
+                                    <a href="https://github.com/alibaba/Dragonfly">Dragonfly: Alibaba P2P file distribution system</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17284599">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17303055">
                                         
-                                            60 comments
+                                            41 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=fmoralesc">fmoralesc</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528728084"
+                                            href="https://news.ycombinator.com/user?id=eb0la">eb0la</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528898192"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     155 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528915809" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528916409" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
