--- a/top_stories/week/page2.html
+++ b/top_stories/week/page2.html
@@ -551,17 +551,17 @@
                         <tr>
                             <td width="auto" valign="middle">
                                 <span class="item_title">
-                                    <a href="https://qz.com/1302201/american-toddlers-are-eating-more-sugar-than-the-amount-recommended-for-adults/">American toddlers are eating more sugar than the amount recommended for adults</a>
+                                    <a href="https://www.indiatoday.in/technology/news/story/facebook-confirms-that-it-tracks-how-you-move-mouse-on-the-computer-screen-1258189-2018-06-12">Facebook confirms that it tracks mouse movements</a>
                                 </span>
                                 <div class="sep5"></div>
                                 <span class="small fade">
-                                    <a class="node" href="https://news.ycombinator.com/item?id=17288321">
+                                    <a class="node" href="https://news.ycombinator.com/item?id=17301336">
                                         
-                                            374 comments
+                                            168 comments
                                         </a> &nbsp;•&nbsp;
                                     <strong><a
-                                            href="https://news.ycombinator.com/user?id=prostoalex">prostoalex</a></strong> &nbsp;•&nbsp;
-                                    <a data-timestamp="1528749356"
+                                            href="https://news.ycombinator.com/user?id=shahocean">shahocean</a></strong> &nbsp;•&nbsp;
+                                    <a data-timestamp="1528878945"
                                        class="submissionTimestamp"></a> &nbsp;•&nbsp;
                                     313 points
                                 </span>
@@ -612,7 +612,7 @@
     <div class="content">
         <div class="inner">
             <strong><a href="https://github.com/heikers/heikers.github.io">Github</a></strong>
-            <strong class="fr" data-timestamp="1528915809" id="pageUpdateTimestamp"></strong>
+            <strong class="fr" data-timestamp="1528916409" id="pageUpdateTimestamp"></strong>
         </div>
     </div>
 </div>
